tdf#113970 : blacklist vlookup/hlookup for threading...

... until the root issue is fixed.

Change-Id: I8969a78fe252e0b12c5703519641f008d33dc02c
Reviewed-on: https://gerrit.libreoffice.org/45039
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Dennis Francis <dennis.francis@collabora.co.uk>